1999-05-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (libclock_a_SOURCES): Move glclock.cc and about.cc
	from rglclock_SOURCES.

	* glclock.cc (glclock): Remove creation of a item factory.
	(handle_button_event): Remove the case for button-3.
	(menu_quit, menu_about, edit_options): Removed.

	* glclock.h (class glclock): Remove members for the popup menu.

	* main.cc (edit_options, describe): New function.
	(create_widget): Modify the menu.

	* TODO: Modified.

	* NEWS: Modified.

	* main.cc (main): Save and restore options.

	* configure.in: Add checks for <gnome-xml/parser.h> and -lxml,
	-lz.

	* Makefile.am (rglclock_SOURCES): Add profile.cc.
	(noinst_HEADERS): Add profile.h.

	* profile.h: New file.

	* profile.cc: New file.

	* main.cc (create_widget): New function.
	(main): Use create_widget.
	(main): Make the glclock object block-local.

1999-05-03  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc (main): Store glc as callback data for menu items.
	(handle_delete_event): Removed.
	(main): Make toplevel function-local.

	* autowidget.h (class auto_widget): Removed.  Also remove all uses
	by replacing with GtkObject_ptr.

	* main.cc (main): Use GtkObject_ptr.

	* autowidget.h (template class GtkObject_ptr): New class template.

	* main.cc (main): Make a vbox and a menu bar.

	* gtkrc: Removed.

	* Makefile.am (pkgdata_DATA): Removed.
	(EXTRA_DIST): Remove gtkrc.

	* glclock.h (class glclock): Update members.
	(class glclock): Remove member t.

	* glclock.cc (glclock): Remove setting of t.
	(update): Keep the current time in a function-local variable.
	(update) [!HAVE_GETTIMEOFDAY]: Use timeout_rate.
	(handle_destroy_event, handle_configure_event, finish_realize):
	Removed.
	(update) [HAVE_GETTIMEOFDAY]: Add comments.
	(glclock): Disable the unimplemented menu item.

	* main.cc (main): Use create_widget.

	* glclock.h: Add comments.
	(class glclock): Update member functions.